<resources>
    <string name="app_name">APP</string>
    <string name="username">"  Username"</string>
    <string name="password">"  Password"</string>
    <string name="Login">Login</string>
    <string name="notRegister">"Sign In  "</string>
    <string name="Register">  Register  </string>
    <string name="cpassword"> " Confirm Password"</string>
    <string name="msg1">You are Lgged In as</string>
    <string name="email">Email Address</string>
    <string name="title_activity_menu">menuAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Speedy">Speedy</string>
    <string name="contactUs">Contact Us</string>
    <string name="sucmsg">You Have Registered Successfully!</string>
    <string name="comname">speedy@gamil.com</string>
    <string name="web">www.Speedy.com</string>
    <string name="home">Home</string>
    <string name="partyplan">Plan Your Party.............</string>
    <string name="dis">Please provide other details</string>
    <string name="line">-----------</string>
    <string name="help">"We'd LOVE to Help!"</string>
    <string name="yourname">" Your Name"</string>
    <string name="Massage">Massage</string>
    <string name="email1">" Your Email Address"</string>
    <string name="send">Send</string>
    <string name="admincontactUs">Contact Us-Submitted Details</string>
    <string name="delete">DELETE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="Massages">"Vidusha        I need to contact Manager"</string>
    <string name="addtocart">Add to Cart</string>
    <string name="Subject">Subject</string>
    <string name="Saman" />
    <string name="profile">My Profile</string>
    <string name="ph">My Image</string>
    <string name="upl">Upload a Photo</string>
    <string name="usn">USERNAME</string>
    <string name="email12">EMAIL</string>
    <string name="password1">PASSWORD</string>
    <string name="pw">Enter Current password</string>
    <string name="deletema">DELETE MY ACCOUNT</string>
    <string name="photo">CAPTURE A IMAGE</string>
    <string name="upld">UPLOAD THE IMAGE</string>
    <string name="acc">GO TO MY ACCOUNT</string>
    <string name="snd">SEND</string>
    <string name="snd1">SEND VIA EMAIL</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="name">Product Name</string>
    <string name="price">Price</string>
    <string name="foodmenu">Food Menu</string>
    <string name="pName">Product Name</string>
    <string name="show">Show</string>
    <string name="view_details">View Details</string>
    <string name="your_name">Your Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="city">City Name</string>
    <string name="confirm">Confirm</string>
    <string name="customise">Customise</string>


    <string name="app_name1">PartyPlan</string>
    <string name="userName">User Name</string>
    <string name="telNo">Telephone Number</string>
    <string name="eventDate">Event Date</string>
    <string name="eventTime">Event Time</string>
    <string name="eventTypeA">Event Type A</string>
    <string name="eventTypeB">Event Type B</string>
    <string name="noOfGuests">Number of guests</string>
    <string name="showDetails">Show Details</string>
    <string name="addEvent">Add Event</string>
    <string name="updateEvent">Update Event</string>
    <string name="deleteEvent">Delete Event</string>


</resources>
