<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDF1"
    android:backgroundTintMode="src_over"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterAct">

    <ImageView
        android:layout_width="92dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/unid_Reg"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"

        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:textColor="#FB8C00"
        android:textColorHint="#00897B" />

    <EditText
        android:id="@+id/email_Reg"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#00897B" />

    <EditText
        android:id="@+id/pw_Reg"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:textColorHint="#00897B" />

    <EditText
        android:id="@+id/cpw_Reg"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/cpw"
        android:hint="@string/cpassword"
        android:textColorHint="#00897B" />

    <Button
        android:id="@+id/reg_Reg"
        android:layout_width="142dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#82B1FF"
        android:text="@string/Register" />


</LinearLayout>