<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/pic2"
    android:backgroundTintMode="src_over">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/login"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/un_log"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/username"


        android:layout_marginTop="35dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/pw_log"
        android:layout_width="152dp"
        android:layout_height="45dp"
        android:drawableLeft="@drawable/password"

        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_log"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/reg_log"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Register"
        android:textColorHighlight="#00470707" />






   </LinearLayout>
